# code-editor

./: .env  .gitignore  Dockerfile  README.md  justfile  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
client/: index.html
client/src/: App.tsx
client/src/components/: CodeOutput.tsx
client/src/lib/: api.ts
client/src/models/: CodeResult.ts
docs/: OVERVIEW.md  SAFETY.md
src/: db.py  runner.py  server.py
src/models/: __init__.py  code_result.py
src/tests/: test_db.py  test_runner.py
