[tool.poetry]
name = "code-editor"
version = "0.1.0"
description = ""
authors = ["Sam Zhang <sam.zijing.zhang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
fastapi = "^0.111.0"
pytest = "^8.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
